gobmkida/c3/buildSpiralOrder
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/buildSpiralOrder/src/patterns/dfa.c:1071:12: error: expected expression
*( _OWORD *)&v12[i + 32] = xmmword_4A7EF0; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/buildSpiralOrder/src/patterns/dfa.c:1071:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v12[i + 32] = xmmword_4A7EF0; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/buildSpiralOrder/src/patterns/dfa.c:1071:28: error: use of undeclared identifier 'xmmword_4A7EF0'
*( _OWORD *)&v12[i + 32] = xmmword_4A7EF0; 
                           ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/buildSpiralOrder/src/patterns/dfa.c:1072:12: error: expected expression
*( _OWORD *)&v12[i + 36] = xmmword_4A7EF0; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/buildSpiralOrder/src/patterns/dfa.c:1072:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v12[i + 36] = xmmword_4A7EF0; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/buildSpiralOrder/src/patterns/dfa.c:1072:28: error: use of undeclared identifier 'xmmword_4A7EF0'
*( _OWORD *)&v12[i + 36] = xmmword_4A7EF0; 
                           ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/buildSpiralOrder/src/patterns/dfa.c:1073:12: error: expected expression
*( _OWORD *)&v12[i + 40] = xmmword_4A7EF0; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/buildSpiralOrder/src/patterns/dfa.c:1073:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v12[i + 40] = xmmword_4A7EF0; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/buildSpiralOrder/src/patterns/dfa.c:1073:28: error: use of undeclared identifier 'xmmword_4A7EF0'
*( _OWORD *)&v12[i + 40] = xmmword_4A7EF0; 
                           ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/buildSpiralOrder/src/patterns/dfa.c:1074:12: error: expected expression
*( _OWORD *)&v12[i + 44] = xmmword_4A7EF0; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/buildSpiralOrder/src/patterns/dfa.c:1074:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v12[i + 44] = xmmword_4A7EF0; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/buildSpiralOrder/src/patterns/dfa.c:1074:28: error: use of undeclared identifier 'xmmword_4A7EF0'
*( _OWORD *)&v12[i + 44] = xmmword_4A7EF0; 
                           ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/buildSpiralOrder/src/patterns/dfa.c:1075:12: error: expected expression
*( _OWORD *)&v12[i + 48] = xmmword_4A7EF0; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/buildSpiralOrder/src/patterns/dfa.c:1075:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v12[i + 48] = xmmword_4A7EF0; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/buildSpiralOrder/src/patterns/dfa.c:1075:28: error: use of undeclared identifier 'xmmword_4A7EF0'
*( _OWORD *)&v12[i + 48] = xmmword_4A7EF0; 
                           ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/buildSpiralOrder/src/patterns/dfa.c:1076:12: error: expected expression
*( _OWORD *)&v12[i + 52] = xmmword_4A7EF0; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/buildSpiralOrder/src/patterns/dfa.c:1076:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v12[i + 52] = xmmword_4A7EF0; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/buildSpiralOrder/src/patterns/dfa.c:1076:28: error: use of undeclared identifier 'xmmword_4A7EF0'
*( _OWORD *)&v12[i + 52] = xmmword_4A7EF0; 
                           ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/buildSpiralOrder/src/patterns/dfa.c:1077:12: error: expected expression
*( _OWORD *)&v12[i + 56] = xmmword_4A7EF0; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/buildSpiralOrder/src/patterns/dfa.c:1077:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v12[i + 56] = xmmword_4A7EF0; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/buildSpiralOrder/src/patterns/dfa.c:1077:28: error: use of undeclared identifier 'xmmword_4A7EF0'
*( _OWORD *)&v12[i + 56] = xmmword_4A7EF0; 
                           ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/buildSpiralOrder/src/patterns/dfa.c:1078:12: error: expected expression
*( _OWORD *)&v12[i + 60] = xmmword_4A7EF0; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/buildSpiralOrder/src/patterns/dfa.c:1078:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v12[i + 60] = xmmword_4A7EF0; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/buildSpiralOrder/src/patterns/dfa.c:1078:28: error: use of undeclared identifier 'xmmword_4A7EF0'
*( _OWORD *)&v12[i + 60] = xmmword_4A7EF0; 
                           ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/buildSpiralOrder/src/patterns/dfa.c:1079:12: error: expected expression
*( _OWORD *)&v12[i + 64] = xmmword_4A7EF0; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/buildSpiralOrder/src/patterns/dfa.c:1079:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v12[i + 64] = xmmword_4A7EF0; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/buildSpiralOrder/src/patterns/dfa.c:1079:28: error: use of undeclared identifier 'xmmword_4A7EF0'
*( _OWORD *)&v12[i + 64] = xmmword_4A7EF0; 
                           ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/buildSpiralOrder/src/patterns/dfa.c:1080:12: error: expected expression
*( _OWORD *)&v12[i + 68] = xmmword_4A7EF0; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/buildSpiralOrder/src/patterns/dfa.c:1080:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v12[i + 68] = xmmword_4A7EF0; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/buildSpiralOrder/src/patterns/dfa.c:1080:28: error: use of undeclared identifier 'xmmword_4A7EF0'
*( _OWORD *)&v12[i + 68] = xmmword_4A7EF0; 
                           ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/buildSpiralOrder/src/patterns/dfa.c:1081:12: error: expected expression
*( _OWORD *)&v12[i + 72] = xmmword_4A7EF0; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/buildSpiralOrder/src/patterns/dfa.c:1081:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v12[i + 72] = xmmword_4A7EF0; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/buildSpiralOrder/src/patterns/dfa.c:1081:28: error: use of undeclared identifier 'xmmword_4A7EF0'
*( _OWORD *)&v12[i + 72] = xmmword_4A7EF0; 
                           ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/buildSpiralOrder/src/patterns/dfa.c:1082:12: error: expected expression
*( _OWORD *)&v12[i + 76] = xmmword_4A7EF0; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/buildSpiralOrder/src/patterns/dfa.c:1082:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v12[i + 76] = xmmword_4A7EF0; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/buildSpiralOrder/src/patterns/dfa.c:1082:28: error: use of undeclared identifier 'xmmword_4A7EF0'
*( _OWORD *)&v12[i + 76] = xmmword_4A7EF0; 
                           ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/buildSpiralOrder/src/patterns/dfa.c:1083:12: error: expected expression
*( _OWORD *)&v12[i + 80] = xmmword_4A7EF0; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/buildSpiralOrder/src/patterns/dfa.c:1083:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v12[i + 80] = xmmword_4A7EF0; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/buildSpiralOrder/src/patterns/dfa.c:1083:28: error: use of undeclared identifier 'xmmword_4A7EF0'
*( _OWORD *)&v12[i + 80] = xmmword_4A7EF0; 
                           ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/buildSpiralOrder/src/patterns/dfa.c:1084:12: error: expected expression
*( _OWORD *)&v12[i + 84] = xmmword_4A7EF0; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/buildSpiralOrder/src/patterns/dfa.c:1084:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v12[i + 84] = xmmword_4A7EF0; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/buildSpiralOrder/src/patterns/dfa.c:1084:28: error: use of undeclared identifier 'xmmword_4A7EF0'
*( _OWORD *)&v12[i + 84] = xmmword_4A7EF0; 
                           ^
42 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/buildSpiralOrder/src/obj/3/dfa.o] Error 1
